# NULLXES-L-TEX

./: .gitignore  README.md  claude.md  pyproject.toml
.github/workflows/: cpu-guards.yml
configs/e01/: latex-e01-480a35.yaml  proxy-1b.yaml  proxy-30b.yaml  proxy-7b.yaml  tiny-cpu.yaml
docs/: ARCHITECTURE.md  RELEASE-GATES.md  RISK-REGISTER.md  ROADMAP-90D.md  SOURCES.md  SPEED-QUALITY.md
docs/adr/: 0001-tokenizer-v1.md  0002-request-level-adapter-routing.md  0003-world-model-v0-before-v1.md  0004-no-raw-tenant-training.md  0005-teacher-offline-only.md  0006-direct-480b-instruct-foundation.md  0007-independent-from-scratch-e01.md  0008-custom-tokenizer.md  0009-qwen-reference-teacher-firewall.md  0010-scratch-pretrain-post-train-lineage.md
docs/branches/: ACTION-RUNTIME.md  ADAPTER-MOE.md  CODEWORLD-V0.md  E-01.md  LAETEX-2.md  WORLD-MODEL-V1.md
docs/planes/: ADAPTER-MOE.md  CODEWORLD.md  EXECUTION-VERIFICATION.md  FOUNDATION.md  ORGANIZATIONAL-WORLD-MODEL.md
docs/reference/: INDEPENDENT-E01-TARGET.md
eval/laetex-bench/: ANTI-CONTAMINATION.md  CORPORATE-COMMUNICATION.md  ENTERPRISE-SYSTEMS.md  GOVERNANCE-SAFE-EXECUTION.md  METRICS.md  README.md  REPOSITORY-ENGINEERING.md  baseline-manifest.yaml
infra/runpod/: ARCHITECTURE.md
model/: README.md  latex-e01-480a35.yaml
model/stages/: ARCH-FREEZE.yaml  D0-CORPUS.yaml  (+24 more)
schemas/: laetex-model-config.v1.json  laetex-tokenizer-manifest.v1.json
tests/: conftest.py  test_bridges_guards.py  test_config_validation.py  test_core_forward.py  test_repo_policy.py  test_tokenizer_guards.py
training/: README.md
(+59 files in other folders)
