[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "laetex-workspace"
version = "0.1.0"
description = "NULLXES LÆTEX independent E-01 research monorepo (architecture + CPU contracts)"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "jsonschema>=4.23",
  "PyYAML>=6.0.2",
  "pytest>=8.3",
  "tokenizers>=0.21",
]

[tool.uv.workspace]
members = [
  "packages/laetex-validation",
  "packages/laetex-core",
  "packages/laetex-hf",
  "packages/laetex-megatron",
  "packages/laetex-tokenizer",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/laetex-validation/src",
  "packages/laetex-core/src",
  "packages/laetex-hf/src",
  "packages/laetex-megatron/src",
  "packages/laetex-tokenizer/src",
]
addopts = "-q"
